; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswresample/extr_soxr_resample.c_process.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswresample/extr_soxr_resample.c_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ResampleContext = type { i32 }
%struct.TYPE_4__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ResampleContext*, %struct.TYPE_4__*, i32, %struct.TYPE_4__*, i32, i32*)* @process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process(%struct.ResampleContext* %0, %struct.TYPE_4__* %1, i32 %2, %struct.TYPE_4__* %3, i32 %4, i32* %5) #0 {
  %7 = alloca %struct.ResampleContext*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  store %struct.ResampleContext* %0, %struct.ResampleContext** %7, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %8, align 8
  store i32 %2, i32* %9, align 4
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %16 = load %struct.ResampleContext*, %struct.ResampleContext** %7, align 8
  %17 = ptrtoint %struct.ResampleContext* %16 to i32
  %18 = load %struct.ResampleContext*, %struct.ResampleContext** %7, align 8
  %19 = ptrtoint %struct.ResampleContext* %18 to i32
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @soxr_set_num_channels(i32 %19, i32 %22)
  %24 = call i64 @soxr_set_error(i32 %17, i32 %23)
  store i64 %24, i64* %15, align 8
  %25 = load i64, i64* %15, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %41, label %27

27:                                               ; preds = %6
  %28 = load %struct.ResampleContext*, %struct.ResampleContext** %7, align 8
  %29 = ptrtoint %struct.ResampleContext* %28 to i32
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %11, align 4
  %34 = sext i32 %33 to i64
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %9, align 4
  %39 = sext i32 %38 to i64
  %40 = call i64 @soxr_process(i32 %29, i32 %32, i64 %34, i64* %13, i32 %37, i64 %39, i64* %14)
  store i64 %40, i64* %15, align 8
  br label %42

41:                                               ; preds = %6
  store i64 0, i64* %13, align 8
  br label %42

42:                                               ; preds = %41, %27
  %43 = load i64, i64* %13, align 8
  %44 = trunc i64 %43 to i32
  %45 = load i32*, i32** %12, align 8
  store i32 %44, i32* %45, align 4
  %46 = load i64, i64* %15, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %42
  br label %51

49:                                               ; preds = %42
  %50 = load i64, i64* %14, align 8
  br label %51

51:                                               ; preds = %49, %48
  %52 = phi i64 [ -1, %48 ], [ %50, %49 ]
  %53 = trunc i64 %52 to i32
  ret i32 %53
}

declare dso_local i64 @soxr_set_error(i32, i32) #1

declare dso_local i32 @soxr_set_num_channels(i32, i32) #1

declare dso_local i64 @soxr_process(i32, i32, i64, i64*, i32, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
